--- a/package.json
+++ b/package.json
@@ -1,25 +1,41 @@
 {
-  "name": "rollup-starter-lib",
+  "name": "vue-sifter",
+  "description": "Vue filter collections",
   "version": "1.0.0",
-  "main": "dist/how-long-till-lunch.cjs.js",
-  "module": "dist/how-long-till-lunch.esm.js",
-  "browser": "dist/how-long-till-lunch.umd.js",
-  "dependencies": {
-    "ms": "^2.0.0"
+  "main": "dist/plugin.cjs.js",
+  "module": "dist/plugin.esm.js",
+  "browser": "dist/plugin.umd.js",
+  "author": {
+    "name": "Irfan Vigma Taufik",
+    "email": "davigmacode@gmail.com"
   },
+  "dependencies": {},
   "devDependencies": {
     "rollup": "^0.46.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-terser": "^3.0.0",
+    "rollup-plugin-uglify": "^6.0.0",
+    "vuepress": "^0.14.4",
+    "yarn-or-npm": "^2.0.4"
   },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "yon run build",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "prepublishOnly": "yon run build && yon run doc:build"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "peerDependencies": {
+    "date-fns": "^1.30.1",
+    "lodash": "^4.17.11",
+    "numeral": "^2.0.6"
+  }
 }
